--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint *.js src tools",
+    "postinstall": "cd node_modules/react-relay-network-modern-ssr && yarn build-lib",
     "relay-compiler": "relay-compiler --src src --exclude 'data/**' --schema src/data/schema.graphql",
     "start": "npm run relay-compiler && babel-node index.js",
     "update-schema": "babel-node tools/updateSchema.js"
@@ -58,7 +59,7 @@
     "react-dom": "^16.3.2",
     "react-relay": "~1.5.0",
     "react-relay-network-modern": "^2.3.0",
-    "react-relay-network-modern-ssr": "^1.1.0",
+    "react-relay-network-modern-ssr": "https://github.com/nodkz/react-relay-network-modern-ssr/archive/v1.1.0.tar.gz",
     "regenerator-runtime": "^0.11.1",
     "relay-compiler": "~1.5.0",
     "relay-runtime": "~1.5.0",
@@ -67,5 +68,8 @@
     "todomvc-common": "^1.0.5",
     "webpack": "^4.7.0",
     "webpack-dev-middleware": "^3.1.3"
+  },
+  "devDependencies": {
+    "postinstall-postinstall": "^1.0.0"
   }
 }
